--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "noteable",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "noteable.js",
   "dependencies": {
     "auto-parse": "^1.8.0"
   },
